# todos

./: .editorconfig  .pre-commit-config.yaml  README.md  requirements-dev.txt  requirements.txt  setup.cfg
scripts/: run.sh
src/tests/: conftest.py  test_app.py
src/tests/routers/v1/: test_items.py  test_users.py
src/todos/: __init__.py
src/todos/routers/v1/: items.py
