[metadata]
name = todos
version = attr: todos.__version__

[options]
packages = find:
package_dir =
    = src
include_package_data = true

[options.packages.find]
where = src
exclude = src/tests

[tool:pytest]
testpaths =
    src/tests

[coverage:run]
branch = True
source =
    todos
    src/tests

[tox:tox]
envlist = py3

[testenv]
deps =
    -r requirements-test.txt
commands =
    coverage run -m pytest -vvv {posargs}
    coverage report --show-missing

[tool:isort]
profile = black
